bpo-36367: Free buffer if realloc fails in tokenize.c (GH-12442)